Alteração do nomes das classes de modelo no swagger.
