# src/main/java/com/invillia/acme/controllers/RestResponseEntityExceptionHandler.java
@@ -11,7 +11,7 @@ import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
 import com.invillia.acme.exceptions.BusinessException;
-import com.invillia.models.Message;
+import com.invillia.models.MessageTO;
 
 
 @ControllerAdvice
@@ -21,7 +21,7 @@ public class RestResponseEntityExceptionHandler extends ResponseEntityExceptionH
 	protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex,
 			HttpHeaders headers, HttpStatus status, WebRequest request) {
 		String bodyOfResponse = ex.getBindingResult().getFieldErrors().stream().map(fe -> fe.getField() + " " + fe.getDefaultMessage()).findFirst().orElse("");
-		Message message = new Message().message(bodyOfResponse);
+		MessageTO message = new MessageTO().message(bodyOfResponse);
 		HttpHeaders header = new HttpHeaders();
 		return handleExceptionInternal(ex, message, header, HttpStatus.BAD_REQUEST, request);
 	}
@@ -29,13 +29,13 @@ public class RestResponseEntityExceptionHandler extends ResponseEntityExceptionH
 	@ExceptionHandler(Exception.class)
 	protected ResponseEntity<Object> handleExcpetion(MethodArgumentNotValidException ex,
 			HttpHeaders headers, HttpStatus status, WebRequest request) {
-		Message message = new Message().message(ex.getMessage());
+		MessageTO message = new MessageTO().message(ex.getMessage());
 		return ResponseEntity.status(status).body(message);
 	}
 	
 	@ExceptionHandler({BusinessException.class})
 	public ResponseEntity<Object> handleBusinessExceptions(BusinessException ex, WebRequest request){
-		Message message = new Message().message(ex.getMessage());
+		MessageTO message = new MessageTO().message(ex.getMessage());
 		return new ResponseEntity<Object>(message, new HttpHeaders(), HttpStatus.UNPROCESSABLE_ENTITY);
 		
 	}
